cmss/main/default/objects/Production__c/Production__c.object-meta.xml
<CustomObject>
    <description>Serves for reporting of production of OZ&apos;s and managers.</description>
    <label>Production</label>
    <nameField>
        <displayFormat>P-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Production Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>