cmss/main/default/objects/Production__c/fields/AcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>AcquisitionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acquisition Date</label>
    <type>Date</type>
</CustomField>