cmss/main/default/objects/Production__c/fields/AmountAs__c.field-meta.xml
<CustomField>
    <fullName>AmountAs__c</fullName>
    <label>Amount As</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>