cmss/main/default/objects/Production__c/fields/AmountNov__c.field-meta.xml
<CustomField>
    <fullName>AmountNov__c</fullName>
    <label>Amount Nov</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>