cmss/main/default/objects/Production__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Production</relationshipLabel>
    <relationshipName>Production</relationshipName>
    <type>Lookup</type>
</CustomField>