cmss/main/default/objects/Production__c/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>