cmss/main/default/objects/Production__c/fields/BusinessPerformanceType__c.field-meta.xml
<CustomField>
    <fullName>BusinessPerformanceType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Performance Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>