cmss/main/default/objects/Production__c/fields/ChangeOrderNr__c.field-meta.xml
<CustomField>
    <fullName>ChangeOrderNr__c</fullName>
    <label>Change Order Nr</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>