cmss/main/default/objects/Production__c/fields/ClosingAgent__c.field-meta.xml
<CustomField>
    <fullName>ClosingAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClosingAgentProduction</relationshipName>
    <type>Lookup</type>
</CustomField>