cmss/main/default/objects/Production__c/fields/ClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ClosingDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>