cmss/main/default/objects/Production__c/fields/CodeAs__c.field-meta.xml
<CustomField>
    <fullName>CodeAs__c</fullName>
    <label>Code As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductionCode</valueSetName>
    </valueSet>
</CustomField>