cmss/main/default/objects/Production__c/fields/CodeNov__c.field-meta.xml
<CustomField>
    <fullName>CodeNov__c</fullName>
    <label>Code Nov</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductionCode</valueSetName>
    </valueSet>
</CustomField>