cmss/main/default/objects/Production__c/fields/CodeTarget__c.field-meta.xml
<CustomField>
    <fullName>CodeTarget__c</fullName>
    <label>Code Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductionCode</valueSetName>
    </valueSet>
</CustomField>