cmss/main/default/objects/Production__c/fields/CountOZ__c.field-meta.xml
<CustomField>
    <fullName>CountOZ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Count OZ</label>
    <type>Checkbox</type>
</CustomField>