cmss/main/default/objects/Production__c/fields/CountTarget__c.field-meta.xml
<CustomField>
    <fullName>CountTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Count Target</label>
    <type>Checkbox</type>
</CustomField>