cmss/main/default/objects/Production__c/fields/CurrentRegionManager__c.field-meta.xml
<CustomField>
    <fullName>CurrentRegionManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Region Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CurrentRegionManagerProduction</relationshipName>
    <type>Lookup</type>
</CustomField>