cmss/main/default/objects/Production__c/fields/CurrentSalesNetManager__c.field-meta.xml
<CustomField>
    <fullName>CurrentSalesNetManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Sales Net Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Production</relationshipName>
    <type>Lookup</type>
</CustomField>