cmss/main/default/objects/Production__c/fields/CurrentTeamManager__c.field-meta.xml
<CustomField>
    <fullName>CurrentTeamManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Team Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CurrentTeamManagerProduction</relationshipName>
    <type>Lookup</type>
</CustomField>