cmss/main/default/objects/Production__c/fields/DateStatistics__c.field-meta.xml
<CustomField>
    <fullName>DateStatistics__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Statistics</label>
    <type>Date</type>
</CustomField>