cmss/main/default/objects/Production__c/fields/InvestmentAmount__c.field-meta.xml
<CustomField>
    <fullName>InvestmentAmount__c</fullName>
    <label>Investment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>