cmss/main/default/objects/Production__c/fields/IsSuperiorMOT__c.field-meta.xml
<CustomField>
    <fullName>IsSuperiorMOT__c</fullName>
    <formula>$User.SuperiorLevel3__c = Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Superior MOT</label>
    <type>Checkbox</type>
</CustomField>