cmss/main/default/objects/Production__c/fields/IsSuperiorRM__c.field-meta.xml
<CustomField>
    <fullName>IsSuperiorRM__c</fullName>
    <formula>$User.SuperiorLevel2__c = OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Superior RM</label>
    <type>Checkbox</type>
</CustomField>