cmss/main/default/objects/Production__c/fields/OverallRankingInNetwork__c.field-meta.xml
<CustomField>
    <fullName>OverallRankingInNetwork__c</fullName>
    <label>Overall Ranking in Network</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>