cmss/main/default/objects/Production__c/fields/OverallRankingInRegion__c.field-meta.xml
<CustomField>
    <fullName>OverallRankingInRegion__c</fullName>
    <label>Overall Ranking in Region</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>