cmss/main/default/objects/Production__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>