cmss/main/default/objects/Production__c/fields/Pillar__c.field-meta.xml
<CustomField>
    <fullName>Pillar__c</fullName>
    <label>Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>