cmss/main/default/objects/Production__c/fields/ProductSpecification__c.field-meta.xml
<CustomField>
    <fullName>ProductSpecification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Specification</label>
    <length>200</length>
    <type>Text</type>
</CustomField>