cmss/main/default/objects/Production__c/fields/ProductTypePS__c.field-meta.xml
<CustomField>
    <fullName>ProductTypePS__c</fullName>
    <label>Product Type PS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>