cmss/main/default/objects/Production__c/fields/RegionManager__c.field-meta.xml
<CustomField>
    <fullName>RegionManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RegionManagerProduction</relationshipName>
    <type>Lookup</type>
</CustomField>