cmss/main/default/objects/Production__c/fields/SalesDate__c.field-meta.xml
<CustomField>
    <fullName>SalesDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Date</label>
    <type>Date</type>
</CustomField>