cmss/main/default/objects/Production__c/fields/SalesDateNov__c.field-meta.xml
<CustomField>
    <fullName>SalesDateNov__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Date Nov</label>
    <type>Date</type>
</CustomField>