cmss/main/default/objects/Production__c/fields/SalesNetManager__c.field-meta.xml
<CustomField>
    <fullName>SalesNetManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Net Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesNetManagerProduction</relationshipName>
    <type>Lookup</type>
</CustomField>