cmss/main/default/objects/Production__c/fields/StaticView__c.field-meta.xml
<CustomField>
    <fullName>StaticView__c</fullName>
    <description>Serves for displaying records in reports depending on static user hierarchy.</description>
    <formula>OR(
$User.Id = ClosingAgent__c,
$User.Id = TeamManager__c,
$User.Id = RegionManager__c,
$User.Id = SalesNetManager__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Static View</label>
    <type>Checkbox</type>
</CustomField>