cmss/main/default/objects/Production__c/fields/TeamManager__c.field-meta.xml
<CustomField>
    <fullName>TeamManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TeamManagerProduction</relationshipName>
    <type>Lookup</type>
</CustomField>