cmss/main/default/objects/Production__c/fields/ValidAsOf__c.field-meta.xml
<CustomField>
    <fullName>ValidAsOf__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valid As Of</label>
    <type>Date</type>
</CustomField>