cmss/main/default/objects/Production__c/recordTypes/Production.recordType-meta.xml
<RecordType>
    <fullName>Production</fullName>
    <active>true</active>
    <label>Production</label>
</RecordType>