cmss/main/default/objects/Production__c/recordTypes/ProductionRankings.recordType-meta.xml
<RecordType>
    <fullName>ProductionRankings</fullName>
    <active>true</active>
    <label>Production Rankings</label>
</RecordType>