cmss/main/default/objects/Production__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Všechny</label>
</ListView>